# frappe-persian-integration

./: .gitignore  LICENSE  package.json  pyproject.toml
persian_integration/: hooks.py  modules.txt  package.json  patches.txt
persian_integration/patches/: add_persian_date_format.py
persian_integration/public/: build.json
persian_integration/public/css/: jquery-ui.min.css  md-persian-datepicker.css  persian-calendar.css  persian-integration.css  vazirmatn-font.css  vazirmatn.css
persian_integration/public/js/: _datepicker-wip.js  persian-calendar.js  persian-date-handler.js  persian-integration.bundle.js
persian_integration/public/scss/: _md-persian-datepicker.scss  _vazirmatn-add.scss  _vazirmatn.scss  persian-integration.bundle.scss
