[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian_integration"
version = "1.0.0"
description = "Adds better persian support for frappe framework"
authors = [{name = "devixa-tech", email = "hmohammad2520@gmail.com"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
exclude = ["node_modules"]